# shadowhound

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  ci_workflow_hint.txt  docker-compose.yml  shadowhound.repos
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
configs/: laptop_webrtc.yaml  thor_ethernet.yaml
docker/: Dockerfile.dev  Dockerfile.thor
docs/: project_context.md
launch/: shadowhound_bringup.launch.py
scripts/: ci_preflight.sh
src/shadowhound_mission_agent/: package.xml  setup.py
src/shadowhound_mission_agent/launch/: bringup.launch.py
src/shadowhound_mission_agent/shadowhound_mission_agent/: mission_agent.py
src/shadowhound_utils/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/shadowhound_utils/shadowhound_utils/: __init__.py  robot_iface.py  skills.py
src/shadowhound_utils/test/: test_skills.py
