cmake_minimum_required(VERSION 3.8)
project(shadowhound_utils)

find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)

ament_python_install_package(${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_cmake_pytest REQUIRED)
  ament_add_pytest_test(test_skills test/test_skills.py)
endif()

ament_package()
