<?xml version="1.0"?>
<package format="3">
  <name>shadowhound_utils</name>
  <version>0.0.1</version>
  <description>Utilities for ShadowHound (QoS, image, robot interface shim)</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
</package>
